samples/_failures_safe/1761295333_5080e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63a6d5b7.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_63a6d5b7.c:152: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_63a6d5b7.c:151:5: error: expected declaration or statement at end of input
  151 |     if
      |     ^~
